@@ -66,7 +66,7 @@ abstract class Peak_Application_Modules
     	if(empty($this->_module_name)) $this->_module_name = $this->_ctrl_name;
 
     	//overdrive application paths to modules folder with Peak_Core_Extension_Modules
-    	Peak_Registry::o()->core->modules()->init($this->_module_name,$this->_module_path);
+    	Peak_Registry::o()->core->modules()->init($this->_module_name, $this->_module_path);
     }
       
     
@@ -75,13 +75,13 @@ abstract class Peak_Application_Modules
      *
      * @param string $default_ctrl
      */
-    public function run($default_ctrl = 'index')
+    public function run($default_ctrl = 'index', $flush_request = false)
     {      	
         //add module name to the end Peak_Router $base_uri
         Peak_Registry::o()->router->base_uri = Peak_Registry::obj()->router->base_uri.$this->_module_name;   
 
         //re-call Peak_Application run() for handling the new routing
-        Peak_Registry::o()->app->run($default_ctrl);
+        Peak_Registry::o()->app->run($default_ctrl, $flush_request);
     }
 
         
